--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Javascript Code Quiz</title>
-    <link rel="stylesheet" type="text/css" href="./Assets/css/style.css" />
+    <link rel="stylesheet" type="text/css" href="./assets/css/style.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Rubik:wght@500&display=swap"
@@ -49,6 +49,6 @@
       </section>
     </main>
 
-    <script src="./Assets/js/script.js"></script>
+    <script src="./assets/js/script.js"></script>
   </body>
 </html>
